--- a/.github/workflows/back-end-cicd.yml
+++ b/.github/workflows/back-end-cicd.yml
@@ -3,31 +3,43 @@ name: Test Lambda Function
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
-    test:
-        runs-on: ubuntu-latest
-    
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
-    
-        - name: Set up Python
-          uses: actions/setup-python@v2
-          with:
-            python-version: 3.9
-    
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-    
-        - name: Run unit tests
-          run: |
-            python -m unittest infra/tests/test_lambda.py
-          env:
-            AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            AWS_REGION: 'us-east-1'
-            SOURCE_DIR: 'website'
+  unit-tests:
+    runs-on: ubuntu-latest
+    env:
+      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: 'us-east-1'
+      SOURCE_DIR: 'website'
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
+        working-directory: infra/lambda
+
+      - name: Run Python Unit Tests
+        run: python -m unittest discover -s . -p '*_test.py'
+        working-directory: infra/lambda
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: <your_terraform_version>
+
+      - name: Initialize Terraform
+        run: terraform init
+        working-directory: infra
+
+      - name: Validate Terraform Configuration
+        run: terraform validate
+        working-directory: infra
