--- a/.github/workflows/back-end-cicd.yml
+++ b/.github/workflows/back-end-cicd.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Python Unit Tests
         run: python -m unittest test_lambda
-        working-directory: .github/workflows
+        working-directory: website/infra
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
