--- a/.github/workflows/back-end-cicd.yml
+++ b/.github/workflows/back-end-cicd.yml
@@ -23,6 +23,10 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
+        working-directory: website/infra/lambda
+
       - name: Run Python Unit Tests
         run: python -m unittest test_lambda
         working-directory: website/infra/lambda
